# signal-criome

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: canonical.nota
schema/: lib.schema  signal-criome.concept.schema
src/: lib.rs
src/schema/: lib.rs
tests/: canonical_examples.rs  round_trip.rs
