[package]
name         = "signal-criome"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-criome"
description  = "Signal contract for Criome trust and attestation records."
publish      = false
links        = "signal-criome"
build        = "build.rs"

[lib]
name = "signal_criome"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota-next", "signal-frame/nota-text"]

[dependencies]
blake3      = "1"
blst        = "0.3"
nota-next   = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
thiserror   = "2"

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
