[package]
name         = "signal-criome"
version      = "0.11.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-criome"
description  = "Signal contract for Criome trust and attestation records."
publish      = false
links        = "signal-criome"
build        = "build.rs"

[lib]
name = "signal_criome"
path = "src/lib.rs"

[[test]]
name = "canonical_examples"
path = "tests/canonical_examples.rs"
required-features = ["nota-text"]

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"
required-features = ["nota-text"]

[features]
default = []
nota-text = ["dep:nota", "signal-frame/nota-text"]

[dependencies]
blake3      = "1"
blst        = "0.3"
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
rkyv        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
thiserror   = "2"

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "255823ab3d0d6c5cab26e26a8b1d60c63c52c7b4" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
