[package]
name         = "signal-criome"
version      = "0.11.1"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-criome"
description  = "Signal contract for Criome trust and attestation records."
publish      = false
links        = "signal-criome"
build        = "build.rs"

[lib]
name = "signal_criome"
path = "src/lib.rs"

[[test]]
name = "canonical_examples"
path = "tests/canonical_examples.rs"
required-features = ["nota-text"]

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"
required-features = ["nota-text"]

[features]
default = []
nota-text = ["dep:nota", "signal-frame/nota-text"]

[dependencies]
blake3      = "1"
blst        = "0.3"
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", rev = "ce7c564de0a0518eaa1938d55dccc460a67cadb4", optional = true }
rkyv        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", rev = "91e675298b79ec2aab2e0714a5e3e5b2d6d07339", default-features = false }
thiserror   = "2"

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "31a9ae1982dc834a31ba2e8d662e71f360e8536c" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
